--- a/Bloodpebble.csproj
+++ b/Bloodpebble.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
     <PackageId>VRising.Bloodpebble</PackageId>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>cheesasaurus, deca, molenzwiebel</Authors>
@@ -59,6 +59,7 @@
     <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="dist/thunderstore/temp" />
     <Copy SourceFiles="icon.png" DestinationFolder="dist/thunderstore/temp"/>
     <Copy SourceFiles="README.md" DestinationFolder="dist/thunderstore/temp"/>
+    <Copy SourceFiles="CHANGELOG.md" DestinationFolder="dist/thunderstore/temp"/>
     <ZipDirectory SourceDirectory="dist/thunderstore/temp" DestinationFile="dist/thunderstore/$(AssemblyName).zip" Overwrite="true"></ZipDirectory>
     <RemoveDir Directories="dist/thunderstore/temp"/>
   </Target>
