--- a/Bloodpebble.csproj
+++ b/Bloodpebble.csproj
@@ -35,7 +35,7 @@
     <PackageReference Include="BepInEx.Unity.IL2CPP" Version="$(BepInExVersion)" IncludeAssets="compile" NoWarn="NU5104" />
     <PackageReference Include="BepInEx.Core" Version="$(BepInExVersion)" IncludeAssets="compile" NoWarn="NU5104" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.1.0" />
-    <PackageReference Include="ScarletRCON.SourceSupport" Version="1.1.3" PrivateAssets="all" />
+    <PackageReference Include="ScarletRCON.SourceSupport" Version="1.*" PrivateAssets="all" />
   </ItemGroup>
 
   <PropertyGroup>
